<resources>
    <string name="app_name">TPR</string>
    <string name="title">ATP</string>
    <string name="t1">Bienvenido a ATP</string>
    <string name="t2">Disfruta la experiencia</string>
    <string name="title_activity_menu_bar">MenuBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Disfruta ATP</string>
    <string name="nav_header_subtitle">Estamos a tu servicio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mapa</string>
    <string name="menu_gallery">Usuario</string>
    <string name="menu_slideshow">Rutas Preferidas</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navegador">Navegador</string>
    <string name="titulocarga">ATP</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="marca">ATP Inc</string>
    <string name="anio">2019</string>
    <string name="disfruta">Disfruta de la experiencia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
